# csv-stream-plot

./: .gitignore  README.md  csv-stream-plot.cabal  layout.hs  main.hs  makefile  stack.yaml
app/: Main.hs
src/: Core.hs  Expression.hs  Plot.hs  Variable.hs  main.hs  variable.hs
test/: Spec.hs
