name:                csv-stream-plot
version:             0.1.0.0
synopsis:            Plot EDSL for streaming CSV files.
description:         Please see README.md
homepage:            http://github.com/jim-holmstroem/csv-stream-plot#README.md
license:             BSD3
license-file:        LICENSE
author:              Jim Holmstrom
maintainer:          jim.holmstroem@gmail.com
copyright:           2016 Jim Holmstrom
category:            Plot
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules: Expression, Plot, Core
  default-language:    Haskell2010
  build-depends: base >= 4.7 && < 5
               , gloss >= 1.9.4 && < 1.9.5
               , split >= 0.2 && < 0.3

executable csv-stream-plot
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , csv-stream-plot

test-suite csv-stream-plot-test-suite
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , csv-stream-plot
                     , QuickCheck

